--- a/markup/_scss/sections/_nl-live-score.scss
+++ b/markup/_scss/sections/_nl-live-score.scss
@@ -203,6 +203,39 @@
 
 /* Matches component
 ---------------------------------------- */
+
+.soccer .matches{
+	@include respond-to (handhelds) {
+		height: 119px;
+	}
+
+	@include respond-to (wide-handhelds) {
+		height: 130px;
+	}
+
+	@include respond-to (tablets) {
+		height: 130px;
+	}
+
+	@include respond-to (wide-tablets) {
+		height: 130px;
+	}
+
+	@include respond-to (allwider) {
+		height: 138px;
+	}
+
+	&__leaders-list {
+		li {
+
+		  img {
+			width: 28px;
+			height: 28px;
+		  }
+		}
+	}
+}	
+
 .matches {
 	width: 100%;
 	height: 137px;
@@ -210,13 +243,31 @@
 	overflow-x: scroll;
 	margin: 0.25rem 0 1.5rem 0;
 
-	@include respond-to (allnotwide) {
-		height: 137px;
+	@include respond-to (handhelds) {
+		height: 99px;
 	}
 
-	@include respond-to (handhelds) {
-		height: 137px;
+	@include respond-to (wide-handhelds) {
+		height: 118px;
 	}
+
+	@include respond-to (tablets) {
+		height: 118px;
+	}
+
+	@include respond-to (wide-tablets) {
+		height: 118px;
+	}
+
+	@include respond-to (allwider) {
+		height: 133px;
+	}
+
+	@include respond-to (large-display) {
+		height: 131px;
+	}
+
+	
 
 	&.rounded-corners {
 		overflow-y: hidden;
@@ -334,6 +385,12 @@
 
 	@include respond-to(allsmall) {
 		margin-bottom: calculateRem(24px);
+	}
+
+	.nl-table-mw{
+	  @include respond-to(allsmall){
+	    min-width: 330px;
+	  }
 	}
 }
 
@@ -983,6 +1040,9 @@
 
 			p.points {
 				font-size: 16px;
+				@include respond-to (handhelds) {
+					padding-top: 5px;
+				} 
 			}
 		}
 	}
